# tmdb-upcoming-feeds

./: .gitignore  README.md  companies.csv  people.csv  pyproject.toml  requirements.txt  test_people.csv  tmdb_upcoming.py
.github/workflows/: add.yml  merge.yml  publish.yml  test.yml
