[project]
name = "tmdb-upcoming-feeds"
version = "0.0.0"
description = "JSON feeds for TK"
readme = "README.md"
authors = [{ name = "Joshua Peek" }]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.1,<9.0",
    "lru-cache @ https://github.com/josh/lru-cache-python/releases/download/v1.0.1/lru_cache-1.0.1-py3-none-any.whl",
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0,<2.0",
    "ruff>=0.3.0"
]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.mypy]
strict = true
