[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tmdb-upcoming-feeds"
version = "0.1.0"
description = "JSON feeds for upcoming movies and TV shows"
readme = "README.md"
authors = [{ name = "Joshua Peek" }]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.1,<9.0",
    "lru-cache @ https://github.com/josh/lru-cache-python/releases/download/v1.0.1/lru_cache-1.0.1-py3-none-any.whl",
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]

[project.scripts]
tmdb-upcoming = "tmdb_upcoming:main"

[dependency-groups]
dev = [
    "mypy>=1.0.0,<2.0",
    "ruff>=0.3.0"
]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.mypy]
strict = true
