[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "tmdb-upcoming-feeds"
version = "0.1.0"
description = "JSON feeds for upcoming movies and TV shows"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Joshua Peek" } ]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "click>=8.1.1,<9",
    "lru-cache @ https://github.com/josh/lru-cache-python/releases/download/v1.0.2/lru_cache-1.0.2-py3-none-any.whl",
]
scripts.tmdb-upcoming = "tmdb_upcoming:main"

[dependency-groups]
dev = [
    "mypy>=1,<2",
    "ruff>=0.3",
]

[tool.ruff]
lint.extend-select = [ "I", "UP" ]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true
